# synth-wiki

./: .gitignore  README.md  README_ZH.md  pyproject.toml
docs/: configurable-relations.md  mcp-knowledge-capture.md  search-quality-zh.md  search-quality.md  self-hosted-server.md
examples/: basic_compile.py  query_example.py  search_example.py
synth_wiki/: __init__.py  cli.py  config.py  embed.py  extract.py  git.py  hybrid.py  log.py  manifest.py  memory.py  ontology.py  paths.py  prompts.py  server.py  storage.py  vectors.py  wiki.py
synth_wiki/compiler/: __init__.py  archive.py  concepts.py  diff.py  images.py  index.py  overview.py  pipeline.py  progress.py  stubs.py  summarize.py  synthesize.py  watch.py  write.py
synth_wiki/linter/: __init__.py  passes.py  runner.py
synth_wiki/llm/: __init__.py  batch.py  cache.py  client.py  cost.py  providers.py  streaming.py
synth_wiki/templates/: caption_image.txt  capture_knowledge.txt  extract_concepts.txt  write_article.txt
tests/: conftest.py  test_cli.py  test_compiler_concepts.py  test_compiler_diff.py  test_compiler_pipeline.py  test_compiler_summarize.py  test_compiler_write.py  test_config.py  test_embed.py  test_extract.py  test_git.py  test_hybrid.py  test_integration.py  test_linter.py  test_llm_client.py  test_llm_cost.py  test_manifest.py  test_memory.py  test_new_features.py  test_ontology.py  test_prompts.py  test_server.py  test_storage.py  test_stubs.py  test_synthesize_overview_archive.py  test_vectors.py  test_wiki.py
